[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/MenuButton.gd" type="Script" id=1]
[ext_resource path="res://sounds/button_hover.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/button_click.wav" type="AudioStream" id=3]

[node name="GameButton" type="Button" groups=[
"Buttons",
]]
margin_right = 90.0
margin_bottom = 22.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
hover_sound = ExtResource( 2 )
click_sound = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
